Fix Sonar Issues