@@ -37,7 +37,7 @@ public class PbUniqueTagsValidator implements Validator<BeneficiaryBulkRequest, 
         log.info("validating unique voucher tags");
         Map<ProjectBeneficiary, List<Error>> errorDetailsMap = new HashMap<>();
         List<ProjectBeneficiary> validProjectBeneficiaries = request.getProjectBeneficiaries()
-                .stream().filter(notHavingErrors()).collect(Collectors.toList());
+                .stream().filter(notHavingErrors()).toList();
 
         if (!validProjectBeneficiaries.isEmpty()) {
             validateUniqueTags(validProjectBeneficiaries, errorDetailsMap);
