@@ -26,14 +26,14 @@ public class PrUniqueEntityValidator implements Validator<ProjectResourceBulkReq
         log.info("validating unique entity");
         Map<ProjectResource, List<Error>> errorDetailsMap = new HashMap<>();
         List<ProjectResource> validEntities = request.getProjectResource()
-                .stream().filter(notHavingErrors()).collect(Collectors.toList());
+                .stream().filter(notHavingErrors()).toList();
         if (!validEntities.isEmpty()) {
             Map<String, ProjectResource> eMap = getIdToObjMap(validEntities);
             if (eMap.keySet().size() != validEntities.size()) {
                 List<String> duplicates = eMap.keySet().stream().filter(id ->
                         validEntities.stream()
                                 .filter(entity -> entity.getId().equals(id)).count() > 1
-                ).collect(Collectors.toList());
+                ).toList();
                 for (String key : duplicates) {
                     Error error = getErrorForUniqueEntity();
                     populateErrorDetails(eMap.get(key), error, errorDetailsMap);
